# fraud_analysis

fraud_detection_bot/: README.md  pyproject.toml  report.md
fraud_detection_bot/src/fraud_detection_bot/: app.py  crew.py  main.py
fraud_detection_bot/src/fraud_detection_bot/config/: agents.yaml  tasks.yaml
